test/typeerrors/Strategies/Unused.type

  x :: a ; y :: b ; z :: c ;
  -------------------------
        x +++ y :: Int;;
     
a == Int : "linkerkant moet een Int zijn"
b == Int : "rechterkant moet een Int zijn";
